# mlb-transformer

./: .gitignore  Cargo.toml  FORMAT.md  README.md  game.py  test_game.py
data/: log.txt  progress.json
data/2020/108/: 604926.json  604927.json  604928.json  604929.json  604930.json  604931.json  604933.json  631357.json  631359.json  631360.json  631361.json  631362.json  631363.json  631364.json  631365.json  631366.json  631367.json  631368.json  631369.json  631371.json  631372.json  631374.json  631375.json  631376.json  631379.json  631381.json  631387.json  631388.json  631389.json  631390.json  631391.json  631392.json  631393.json  631394.json  631395.json  631396.json  631397.json
data/2020/109/: 603764.json  603765.json  603766.json  603767.json  603768.json  603769.json  603771.json  630099.json  630100.json  630101.json  630109.json  630110.json  630111.json  630115.json  630116.json  630117.json  630118.json  630145.json  630174.json  630193.json  630194.json  630201.json  630202.json  630203.json  630216.json  630217.json  630219.json  630220.json  630221.json  630223.json  630224.json  630225.json  630226.json  630243.json  630263.json  630270.json  630271.json
data/2020/110/: 603958.json  603959.json  603960.json  603961.json  603962.json  603966.json  630492.json  630493.json  630495.json  630496.json  630497.json  630568.json  630575.json  630591.json  630592.json  631659.json  631660.json  (+19 more)
interpret/: analyse.py  game.py  parse_game.py
src/: main.rs  model.rs
training/: MLB Train.ipynb  tokenizer.json  train.py  train_tokenizer.py
(+19214 files in other folders)
