[package]
name = "mlb-transformer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
serde-xml-rs = "0.6.0"
indicatif = "0.17.8"
futures = "0.3"
glob = "0.3.1"